[usr] Add TA installation feature in agency & delete asf_usr

--- a/agency/usr/apps/Makefile
+++ b/agency/usr/apps/Makefile
@@ -10,15 +10,10 @@ apps_final: apps_build
 
 apps_build:
 # Smart Object specific apps
-ifeq ($(CONFIG_ASF),y)
-	make -C asf_usr
-endif
-
 ifeq ($(CONFIG_ASF_TA_TST),y)
 	make -C asf_ta_tst
 endif
 
 clean:
 	$(Q)echo "Cleaning apps completed"
-	$(Q)make -C asf_usr clean
-	$(Q)make -C hello_world_ta_tst clean
+	$(Q)make -C asf_ta_tst clean
