--- a/agency/linux/arch/arm/boot/dts/vexpress-v2m-rs1.dtsi
+++ b/agency/linux/arch/arm/boot/dts/vexpress-v2m-rs1.dtsi
@@ -276,8 +276,30 @@
 
 					port {
 						clcd_pads: endpoint {
-							remote-endpoint = <&dvi_bridge_in>;
+							remote-endpoint = <&clcd_panel>;
 							arm,pl11x,tft-r0g0b0-pads = <0 8 16>;
+						};
+					};
+
+					panel {
+						compatible = "panel-dpi";
+
+						port {
+							clcd_panel: endpoint {
+							remote-endpoint = <&clcd_pads>;
+							};
+						};
+
+						panel-timing {
+							clock-frequency = <65000000>;
+							hactive = <1024>;
+							vactive = <768>;
+							hsync-len = <136>;
+							hfront-porch = <20>;
+							hback-porch = <160>;
+							vfront-porch = <3>;
+							vback-porch = <29>;
+							vsync-len = <6>;
 						};
 					};
 				};
