--- a/agency/linux/arch/arm/boot/dts/sun50i-a64-merida-blind.dts
+++ b/agency/linux/arch/arm/boot/dts/sun50i-a64-merida-blind.dts
@@ -69,26 +69,26 @@
 	agency {
 		domain-size = <0x20000000>; /* 512 MB */
 	
-        /* Backends */
-        backends {
-        	compatible = "arm,soo";
+         /* Backends */
+	 backends {
 		
             vuart {
-        	    compatible = "soo,vuart";
+        	compatible = "vuart,backend";
                 status = "ok";
             };
-		
+						            			
             vuihandler {
-                compatible = "soo,vuihandler";
-                status = "ok";
+		compatible = "vuihandler,backend";
+		status = "ok";
             };
-
+            
             vdoga12v6nm {
-                compatible = "soo,vdoga12v6nm";
+        	compatible = "vdoga12v6nm,backend";
                 status = "ok";
             };
-		
-        };
+				
+	 };
+	
     };
 
     psci {
