--- a/agency/linux/arch/arm/boot/dts/vexpress-tz.dts
+++ b/agency/linux/arch/arm/boot/dts/vexpress-tz.dts
@@ -361,27 +361,27 @@
 	};
 	
 	agency {
-		domain-size = <0x20000000>; /* 512 MB */
-	
+		domain-size = <0x20000000>; /* 512 MB */	
 	
 		/* Backends */
+
 		backends {
-			compatible = "arm,soo";
 
 			vdummy {
-				compatible = "soo,vdummy";
+				compatible = "vdummy,backend";
 				status = "ok";
 			};
 	
 			vuart {
-				compatible = "soo,vuart";
+				compatible = "vuart,backend";
 				status = "ok";
 			};
 		
 			vuihandler {
-				compatible = "soo,vuihandler";
+				compatible = "vuihandler,backend";
 				status = "disabled";
 			};
+		
 		};
 	};
 
