Alignment with the original so3 repository

--- a/ME/SOO.refSO3/so3/arch/arm/Makefile
+++ b/ME/SOO.refSO3/so3/arch/arm/Makefile
@@ -1,4 +1,4 @@
-obj-y += armv7.o setup.o exception.o context.o fault.o backtrace.o
+obj-y += armv7.o setup.o exception.o context.o fault.o
 obj-y += boot/ 
 
 obj-$(CONFIG_MMU) += mmu.o
