--- a/agency/linux/soo/drivers/Makefile
+++ b/agency/linux/soo/drivers/Makefile
@@ -2,12 +2,11 @@
 # Makefile for SOO general drivers.
 #
 
-obj-$(CONFIG_VDUMMY_BACKEND) += vdummyback/ vdummyrtback/
+obj-$(CONFIG_VDUMMY_BACKEND) += vdummyback/ 
 obj-$(CONFIG_VDOGA12V6NM_BACKEND) += vdoga12v6nmback/
 obj-$(CONFIG_VWEATHER_BACKEND)	+= vweatherback/
 obj-$(CONFIG_VUART_BACKEND) += vuartback/
 obj-$(CONFIG_VUIHANDLER_BACKEND) += vuihandlerback/
-obj-$(CONFIG_VNETSTREAM_BACKEND) += vnetstreamback/
 obj-$(CONFIG_VINPUT_BACKEND)	+= vinputback/
 obj-$(CONFIG_VLEDS_BACKEND)		+= vledsback/
 obj-$(CONFIG_VFB_BACKEND)  += vfbback/
