Major alignment with 3-adob-soolink / new version of the Winenet protocol

--- a/agency/rootfs/configs/rpi4_defconfig
+++ b/agency/rootfs/configs/rpi4_defconfig
@@ -555,18 +555,18 @@ BR2_PACKAGE_PULSEAUDIO_HAS_ATOMIC=y
 # Compressors and decompressors
 #
 # BR2_PACKAGE_BROTLI is not set
-# BR2_PACKAGE_BZIP2 is not set
+BR2_PACKAGE_BZIP2=y
 BR2_PACKAGE_GZIP=y
 # BR2_PACKAGE_LRZIP is not set
 BR2_PACKAGE_LZ4=y
-# BR2_PACKAGE_LZIP is not set
+BR2_PACKAGE_LZIP=y
 # BR2_PACKAGE_LZOP is not set
 # BR2_PACKAGE_P7ZIP is not set
 # BR2_PACKAGE_PIGZ is not set
 # BR2_PACKAGE_PIXZ is not set
 # BR2_PACKAGE_UNRAR is not set
 # BR2_PACKAGE_UNZIP is not set
-# BR2_PACKAGE_XZ is not set
+BR2_PACKAGE_XZ=y
 BR2_PACKAGE_ZIP=y
 # BR2_PACKAGE_ZSTD is not set
 
@@ -1528,7 +1528,7 @@ BR2_PACKAGE_PYTHON_RTIMULIB=y
 # BR2_PACKAGE_PYTHON_SEE is not set
 # BR2_PACKAGE_PYTHON_SEMVER is not set
 BR2_PACKAGE_PYTHON_SENSE_HAT=y
-BR2_PACKAGE_PYTHON_SENSE_EMU=y
+# BR2_PACKAGE_PYTHON_SENSE_EMU is not set
 # BR2_PACKAGE_PYTHON_SENTRY_SDK is not set
 # BR2_PACKAGE_PYTHON_SERIAL is not set
 # BR2_PACKAGE_PYTHON_SERIAL_ASYNCIO is not set
@@ -2022,10 +2022,10 @@ BR2_PACKAGE_EXPAT=y
 # BR2_PACKAGE_LIBJSON is not set
 # BR2_PACKAGE_LIBROXML is not set
 # BR2_PACKAGE_LIBUCL is not set
-# BR2_PACKAGE_LIBXML2 is not set
+BR2_PACKAGE_LIBXML2=y
 # BR2_PACKAGE_LIBXMLPP is not set
 # BR2_PACKAGE_LIBXMLRPC is not set
-# BR2_PACKAGE_LIBXSLT is not set
+BR2_PACKAGE_LIBXSLT=y
 # BR2_PACKAGE_LIBYAML is not set
 # BR2_PACKAGE_MXML is not set
 # BR2_PACKAGE_PUGIXML is not set
