Updated flags and remove debug config in cmake

--- a/agency/usr/CMakeLists.txt
+++ b/agency/usr/CMakeLists.txt
@@ -8,8 +8,7 @@ include_directories(
 
 link_directories(../../rootfs/host/arm-buildroot-linux-gnueabihf/sysroot/usr/lib/)
 
-set(CMAKE_C_FLAGS_DEBUG "-Wall -Wmissing-prototypes -Wstrict-prototypes -O2 -fomit-frame-pointer -std=gnu89")
-set(CMAKE_C_FLAGS_RELEASE "-Wall -Wmissing-prototypes -Wstrict-prototypes -O2 -fomit-frame-pointer -std=gnu89")
+set(CMAKE_C_FLAGS_RELEASE "-Wall -Wstrict-prototypes -O2 -fomit-frame-pointer -std=gnu89")
 
 add_subdirectory(core)
 add_subdirectory(dcm)
