Various alignments with branch 5

--- a/ME/SOO.refso3/so3/configs/so3virt_defconfig
+++ b/ME/SOO.refso3/so3/configs/so3virt_defconfig
@@ -15,8 +15,13 @@ CONFIG_STANDALONE=y
 CONFIG_SO3VIRT=y
 CONFIG_THREAD_ENV=y
 # CONFIG_PROC_ENV is not set
+
+#
+# SO3 Scheduling configuration
+#
 CONFIG_SCHED_RR=y
 # CONFIG_SCHED_PRIO is not set
+CONFIG_SCHED_FREQ_PREEMPTION=y
 
 #
 # Drivers
@@ -55,9 +60,7 @@ CONFIG_ROOTFS_NONE=y
 # SOO Mobile Entity frontend drivers
 #
 CONFIG_VDUMMY_FRONTEND=y
-# CONFIG_VDUMMYRT_FRONTEND is not set
 CONFIG_VUART_FRONTEND=y
-# CONFIG_VNETSTREAM_FRONTEND is not set
 # CONFIG_VDOGA12V6NM_FRONTEND is not set
 # CONFIG_VWEATHER_FRONTEND is not set
 # CONFIG_VUIHANDLER_FRONTEND is not set
