Rootfs Merida: Add the bluez tools to the rootfs merdia_defconfig.

--- a/agency/rootfs/configs/merida_defconfig
+++ b/agency/rootfs/configs/merida_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2020.02-rc3-g8ff8000b3-dirty Configuration
+# Buildroot 2020.02-rc3-gd404d0c21-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 BR2_HOST_GCC_AT_LEAST_4_9=y
@@ -2113,7 +2113,7 @@ BR2_PACKAGE_CLASSPATH_ARCH_SUPPORTS=y
 # BR2_PACKAGE_GLI is not set
 # BR2_PACKAGE_GLIBMM is not set
 # BR2_PACKAGE_GLM is not set
-# BR2_PACKAGE_GMP is not set
+BR2_PACKAGE_GMP=y
 # BR2_PACKAGE_GSL is not set
 # BR2_PACKAGE_GTEST is not set
 BR2_PACKAGE_JEMALLOC_ARCH_SUPPORTS=y
@@ -2320,10 +2320,11 @@ BR2_PACKAGE_QEMU_ARCH_SUPPORTS_TARGET=y
 # BR2_PACKAGE_BCUSDK is not set
 # BR2_PACKAGE_BIND is not set
 # BR2_PACKAGE_BIRD is not set
-# BR2_PACKAGE_BLUEZ_TOOLS is not set
+BR2_PACKAGE_BLUEZ_TOOLS=y
 BR2_PACKAGE_BLUEZ5_UTILS=y
 # BR2_PACKAGE_BLUEZ5_UTILS_OBEX is not set
-# BR2_PACKAGE_BLUEZ5_UTILS_CLIENT is not set
+BR2_PACKAGE_BLUEZ5_UTILS_CLIENT=y
+BR2_PACKAGE_BLUEZ5_UTILS_DEPRECATED=y
 # BR2_PACKAGE_BLUEZ5_UTILS_EXPERIMENTAL is not set
 # BR2_PACKAGE_BLUEZ5_UTILS_PLUGINS_HEALTH is not set
 # BR2_PACKAGE_BLUEZ5_UTILS_PLUGINS_MIDI is not set
