Major alignment with master

--- a/agency/linux/soo/core/Makefile
+++ b/agency/linux/soo/core/Makefile
@@ -1,5 +1,5 @@
-obj-y += core.o device_access.o crc32.o sysfs.o
+obj-y += core.o device_access.o crc32.o sysfs.o injector.o
 
-obj-$(CONFIG_ARM_PSCI) += asf.o
+obj-$(CONFIG_ARM_PSCI) += asf/
 
 
