--- a/agency/rootfs/configs/merida_defconfig
+++ b/agency/rootfs/configs/merida_defconfig
@@ -1,12 +1,13 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2020.02-rc3-gf16afb3ae7-dirty Configuration
+# Buildroot 2020.02-rc3-gd404d0c21-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 BR2_HOST_GCC_AT_LEAST_4_9=y
 BR2_HOST_GCC_AT_LEAST_5=y
 BR2_HOST_GCC_AT_LEAST_6=y
 BR2_HOST_GCC_AT_LEAST_7=y
+BR2_HOST_GCC_AT_LEAST_8=y
 
 #
 # Target options
@@ -543,7 +544,7 @@ BR2_PACKAGE_PULSEAUDIO_HAS_ATOMIC=y
 # BR2_PACKAGE_BZIP2 is not set
 # BR2_PACKAGE_GZIP is not set
 # BR2_PACKAGE_LRZIP is not set
-# BR2_PACKAGE_LZ4 is not set
+BR2_PACKAGE_LZ4=y
 # BR2_PACKAGE_LZIP is not set
 # BR2_PACKAGE_LZOP is not set
 # BR2_PACKAGE_P7ZIP is not set
@@ -1586,7 +1587,7 @@ BR2_PACKAGE_LIBGPG_ERROR_SYSCFG="arm-unknown-linux-gnueabi"
 # BR2_PACKAGE_LIBTOMCRYPT is not set
 # BR2_PACKAGE_LIBUECC is not set
 # BR2_PACKAGE_MBEDTLS is not set
-# BR2_PACKAGE_NETTLE is not set
+BR2_PACKAGE_NETTLE=y
 # BR2_PACKAGE_OPENSSL is not set
 BR2_PACKAGE_PROVIDES_HOST_OPENSSL="host-libopenssl"
 # BR2_PACKAGE_RHASH is not set
@@ -2112,7 +2113,7 @@ BR2_PACKAGE_CLASSPATH_ARCH_SUPPORTS=y
 # BR2_PACKAGE_GLI is not set
 # BR2_PACKAGE_GLIBMM is not set
 # BR2_PACKAGE_GLM is not set
-# BR2_PACKAGE_GMP is not set
+BR2_PACKAGE_GMP=y
 # BR2_PACKAGE_GSL is not set
 # BR2_PACKAGE_GTEST is not set
 BR2_PACKAGE_JEMALLOC_ARCH_SUPPORTS=y
@@ -2319,10 +2320,11 @@ BR2_PACKAGE_QEMU_ARCH_SUPPORTS_TARGET=y
 # BR2_PACKAGE_BCUSDK is not set
 # BR2_PACKAGE_BIND is not set
 # BR2_PACKAGE_BIRD is not set
-# BR2_PACKAGE_BLUEZ_TOOLS is not set
+BR2_PACKAGE_BLUEZ_TOOLS=y
 BR2_PACKAGE_BLUEZ5_UTILS=y
 # BR2_PACKAGE_BLUEZ5_UTILS_OBEX is not set
-# BR2_PACKAGE_BLUEZ5_UTILS_CLIENT is not set
+BR2_PACKAGE_BLUEZ5_UTILS_CLIENT=y
+BR2_PACKAGE_BLUEZ5_UTILS_DEPRECATED=y
 # BR2_PACKAGE_BLUEZ5_UTILS_EXPERIMENTAL is not set
 # BR2_PACKAGE_BLUEZ5_UTILS_PLUGINS_HEALTH is not set
 # BR2_PACKAGE_BLUEZ5_UTILS_PLUGINS_MIDI is not set
@@ -2657,7 +2659,7 @@ BR2_PACKAGE_XENOMAI_COBALT_ARCH_SUPPORTS=y
 # BR2_PACKAGE_CHECKPOLICY is not set
 # BR2_PACKAGE_IMA_EVM_UTILS is not set
 # BR2_PACKAGE_OPTEE_BENCHMARK is not set
-# BR2_PACKAGE_OPTEE_CLIENT is not set
+BR2_PACKAGE_OPTEE_CLIENT=y
 # BR2_PACKAGE_PAXTEST is not set
 # BR2_PACKAGE_POLICYCOREUTILS is not set
 # BR2_PACKAGE_REFPOLICY is not set
