--- a/ME/SOO.refso3/so3/devices/Kconfig
+++ b/ME/SOO.refso3/so3/devices/Kconfig
@@ -8,6 +8,7 @@ source "devices/serial/Kconfig"
 source "devices/ramdev/Kconfig"
 source "devices/timer/Kconfig"
 source "devices/irq/Kconfig"
+source "devices/fb/Kconfig"
 
 
 endmenu
