--- a/ME/SOO.refso3/so3/soo/drivers/Kconfig
+++ b/ME/SOO.refso3/so3/soo/drivers/Kconfig
@@ -5,10 +5,13 @@
 menu "SOO Mobile Entity frontend drivers"
 
 config VDUMMY_FRONTEND
-        bool "vdummy Dummy driver support debugging and testing"
+	bool "vdummy Dummy driver support debugging and testing"
 
 config VUART_FRONTEND
 	bool "vuart serial driver"
+
+config VFB_FRONTEND
+	bool "virtual framebuffer frontend driver"
 
 config VDOGA12V6NM_FRONTEND
 	bool "vDoga12v6nm frontend for the DOGA 12V 6Nm blind motor"
@@ -20,4 +23,3 @@ config VUIHANDLER_FRONTEND
 	bool "vuihandler UI manager driver"
 
 endmenu
-
