usr BT server: Move the BT server in the usr/core/injector folder.

--- a/agency/usr/core/CMakeLists.txt
+++ b/agency/usr/core/CMakeLists.txt
@@ -1,9 +1,10 @@
 
-add_executable(agency core.c injector.c leds.c)
+add_executable(agency core.c leds.c)
 
 add_subdirectory(migration)
 add_subdirectory(upgrader)
 add_subdirectory(asf)
 add_subdirectory(device_access)
+add_subdirectory(injector)
 
-target_link_libraries(agency dcm frozen pthread z expat archive lz4)
+target_link_libraries(agency dcm frozen pthread z expat archive lz4 bluetooth)
