Major refactoring of backend and frontend & bug fixes
- New model for backend and frontend drivers
- Fixed bugs in DC event handling (incoming dc_event tracking)
- Added small apps for injection, save/restore/shutdown of ME (currently
only in slot #2)

--- a/ME/SOO.refso3/so3/soo/kernel/Makefile
+++ b/ME/SOO.refso3/so3/soo/kernel/Makefile
@@ -6,7 +6,10 @@
 obj-y	+= hypervisor.o
 obj-y	+= evtchn.o
 obj-y	+= gnttab.o
-obj-y	+= vbus/ vbstore/ soo/ console/ debug/ 
+obj-y   += imec.o
+obj-y   += soo_guest_activity.o
+obj-y   += soo_profile.o
+obj-y	+= vbus/ vbstore/ console/ debug/ 
 
 # dependencies on generated files need to be listed explicitly
 
