--- a/agency/usr/apps/CMakeLists.txt
+++ b/agency/usr/apps/CMakeLists.txt
@@ -2,3 +2,9 @@
 
 add_subdirectory(asf_ta_tst)
 
+add_executable(injector injector.c)
+
+add_executable(saveme saveme.c)
+add_executable(restoreme restoreme.c)
+add_executable(shutdownme shutdownme.c)
+
