--- a/ME/SOO.refso3/so3/soo/drivers/Makefile
+++ b/ME/SOO.refso3/so3/soo/drivers/Makefile
@@ -1,3 +1,5 @@
+obj-y += vdevfront.o
+
 obj-$(CONFIG_VDUMMY_FRONTEND) += vdummyfront/
 obj-$(CONFIG_VUART_FRONTEND) += vuartfront/
 obj-$(CONFIG_VFB_FRONTEND) += vfbfront/
