--- a/agency/linux/arch/arm/boot/dts/bcm283x.dtsi
+++ b/agency/linux/arch/arm/boot/dts/bcm283x.dtsi
@@ -18,7 +18,7 @@
 / {
 	compatible = "brcm,bcm2835";
 	model = "BCM2835";
-	interrupt-parent = <&intc>;
+	/* interrupt-parent = <&intc>; */
 	#address-cells = <1>;
 	#size-cells = <1>;
 
@@ -55,8 +55,8 @@
 		compatible = "simple-bus";
 		#address-cells = <1>;
 		#size-cells = <1>;
-
-		timer@7e003000 {
+/* SOO.tech - added label */
+		system_timer: timer@7e003000 {
 			compatible = "brcm,bcm2835-system-timer";
 			reg = <0x7e003000 0x1000>;
 			interrupts = <1 0>, <1 1>, <1 2>, <1 3>;
@@ -66,8 +66,8 @@
 			 */
 			clock-frequency = <1000000>;
 		};
-
-		txp@7e004000 {
+/* SOO.tech - added txp label */
+		txp:txp@7e004000 {
 			compatible = "brcm,bcm2835-txp";
 			reg = <0x7e004000 0x20>;
 			interrupts = <1 11>;
@@ -113,13 +113,14 @@
 			#dma-cells = <1>;
 			brcm,dma-channel-mask = <0x7f35>;
 		};
-
+#if 0
 		intc: interrupt-controller@7e00b200 {
 			compatible = "brcm,bcm2835-armctrl-ic";
 			reg = <0x7e00b200 0x200>;
 			interrupt-controller;
 			#interrupt-cells = <2>;
 		};
+#endif
 
 		pm: watchdog@7e100000 {
 			compatible = "brcm,bcm2835-pm", "brcm,bcm2835-pm-wdt";
@@ -148,8 +149,9 @@
 				<&dsi0 0>, <&dsi0 1>, <&dsi0 2>,
 				<&dsi1 0>, <&dsi1 1>, <&dsi1 2>;
 		};
-
-		rng@7e104000 {
+/* SOO.tech */
+/* Added label rng */
+		rng: rng@7e104000 {
 			compatible = "brcm,bcm2835-rng";
 			reg = <0x7e104000 0x10>;
 			interrupts = <2 29>;
@@ -490,7 +492,8 @@
 
 			status = "disabled";
 		};
-
+/* SOO.tech */
+#if 0
 		thermal: thermal@7e212000 {
 			compatible = "brcm,bcm2835-thermal";
 			reg = <0x7e212000 0x8>;
@@ -498,7 +501,7 @@
 			#thermal-sensor-cells = <0>;
 			status = "disabled";
 		};
-
+#endif
 		aux: aux@7e215000 {
 			compatible = "brcm,bcm2835-aux";
 			#clock-cells = <1>;
@@ -577,7 +580,33 @@
 
 			status = "disabled";
 		};
+/* SOO.tech */
+		csi0: csi@7e800000 {
+			compatible = "brcm,bcm2835-unicam";
+			reg = <0x7e800000 0x800>,
+			      <0x7e802000 0x4>;
+			interrupts = <2 6>;
+			clocks = <&clocks BCM2835_CLOCK_CAM0>;
+			clock-names = "lp";
+			#address-cells = <1>;
+			#size-cells = <0>;
+			#clock-cells = <1>;
+			status = "disabled";
+		};
 
+		csi1: csi@7e801000 {
+			compatible = "brcm,bcm2835-unicam";
+			reg = <0x7e801000 0x800>,
+			      <0x7e802004 0x4>;
+			interrupts = <2 7>;
+			clocks = <&clocks BCM2835_CLOCK_CAM1>;
+			clock-names = "lp";
+			#address-cells = <1>;
+			#size-cells = <0>;
+			#clock-cells = <1>;
+			status = "disabled";
+		};
+/* --- */
 		i2c1: i2c@7e804000 {
 			compatible = "brcm,bcm2835-i2c";
 			reg = <0x7e804000 0x1000>;
