--- a/agency/linux/drivers/mmc/host/Makefile
+++ b/agency/linux/drivers/mmc/host/Makefile
@@ -24,8 +24,8 @@ obj-$(CONFIG_MMC_SDHCI_F_SDH30)	+= sdhci_f_sdh30.o
 obj-$(CONFIG_MMC_SDHCI_SPEAR)	+= sdhci-spear.o
 
 # SOO.tech
-obj-$(CONFIG_MMC_BCM2835_MMC)	+= bcm2835-mmc.o
-obj-$(CONFIG_MMC_BCM2835_SDHOST)	+= bcm2835-sdhost.o
+#obj-$(CONFIG_MMC_BCM2835_MMC)	+= bcm2835-mmc.o
+#obj-$(CONFIG_MMC_BCM2835_SDHOST)	+= bcm2835-sdhost.o
 
 obj-$(CONFIG_MMC_SDHCI_AM654)	+= sdhci_am654.o
 obj-$(CONFIG_MMC_WBSD)		+= wbsd.o
