--- a/agency/linux/arch/arm/boot/dts/bcm2711-rpi-4-b.dts
+++ b/agency/linux/arch/arm/boot/dts/bcm2711-rpi-4-b.dts
@@ -80,18 +80,18 @@
 			compatible = "arm,soo";
 
 			vdummy {
-				compatible = "soo,vdummy";
+				compatible = "vdummy,backend";
 				status = "ok";
 			};
 	
 			vuart {
-				compatible = "soo,vuart";
+				compatible = "vuart,backend";
 				status = "ok";
 			};
 		
 			vuihandler {
-				compatible = "soo,vuihandler";
-				status = "ok";
+				compatible = "vuihandler,backend";
+				status = "disabled";
 			};
 		
 		};
