--- a/agency/linux/soo/Makefile
+++ b/agency/linux/soo/Makefile
@@ -2,6 +2,7 @@ obj-y	+= kernel/
 obj-y 	+= drivers/
 obj-y	+= core/
 obj-y   += dcm/
+obj-y   += display_manager/
 
 obj-y	+= soo_name.o
 obj-y 	+= soolink/
