Create SOO.net from ref

--- a/agency/linux/arch/arm/boot/dts/vexpress-notz.dts
+++ b/agency/linux/arch/arm/boot/dts/vexpress-notz.dts
@@ -372,6 +372,11 @@
 				compatible = "vdummy,backend";
 				status = "ok";
 			};
+
+			vnet {
+				compatible = "vnet,backend";
+				status = "ok";
+			};
 	
 			vuart {
 				compatible = "vuart,backend";
