--- a/agency/linux/arch/arm/boot/dts/bcm2711-rpi-4-b.dts
+++ b/agency/linux/arch/arm/boot/dts/bcm2711-rpi-4-b.dts
@@ -83,6 +83,11 @@
 				compatible = "vdummy,backend";
 				status = "ok";
 			};
+
+			vnet {
+				compatible = "vnet,backend";
+				status = "ok";
+			};
 	
 			vuart {
 				compatible = "vuart,backend";
