--- a/agency/linux/arch/arm/boot/dts/vexpress-tz.dts
+++ b/agency/linux/arch/arm/boot/dts/vexpress-tz.dts
@@ -371,6 +371,11 @@
 				compatible = "vdummy,backend";
 				status = "ok";
 			};
+
+			vnet {
+				compatible = "vnet,backend";
+				status = "ok";
+			};
 	
 			vuart {
 				compatible = "vuart,backend";
