--- a/agency/linux/soo/display_manager/Kconfig
+++ b/agency/linux/soo/display_manager/Kconfig
@@ -1,2 +1,6 @@
+menu "Display Manager"
+
 source "soo/display_manager/local_interfaces/Kconfig"
-source "soo/display_manager/ME_interactions/Kconfig"  
+source "soo/display_manager/me_interactions/Kconfig"
+
+endmenu # Display Manager
