--- a/ME/SOO.refso3/so3/soo/drivers/Kconfig
+++ b/ME/SOO.refso3/so3/soo/drivers/Kconfig
@@ -13,6 +13,9 @@ config VUART_FRONTEND
 config VFB_FRONTEND
 	bool "virtual framebuffer frontend driver"
 
+config VINPUT_FRONTEND
+	bool "virtual input device frontend driver"
+
 config VDOGA12V6NM_FRONTEND
 	bool "vDoga12v6nm frontend for the DOGA 12V 6Nm blind motor"
 
