--- a/ME/SOO.refso3/so3/soo/drivers/Makefile
+++ b/ME/SOO.refso3/so3/soo/drivers/Makefile
@@ -3,6 +3,7 @@ obj-y += vdevfront.o
 obj-$(CONFIG_VDUMMY_FRONTEND) += vdummyfront/
 obj-$(CONFIG_VUART_FRONTEND) += vuartfront/
 obj-$(CONFIG_VFB_FRONTEND) += vfbfront/
+obj-$(CONFIG_VINPUT_FRONTEND) += vinputfront/
 obj-$(CONFIG_VDOGA12V6NM_FRONTEND) += vdoga12v6nmfront/
 obj-$(CONFIG_VWEATHER_FRONTEND) += vweatherfront/
 obj-$(CONFIG_VUIHANDLER_FRONTEND) += vuihandlerfront/
