Add virtual driver for keyboard and mouse, redirect Linux input events to active ME (see #17).

--- a/ME/SOO.refso3/so3/devices/fb/Kconfig
+++ b/ME/SOO.refso3/so3/devices/fb/Kconfig
@@ -3,5 +3,5 @@ config PL111_CLCD
 	depends on VEXPRESS
 
 config SO3VIRT_FB
-	bool "so3virt framebuffer driver"
+	bool "Virtual framebuffer driver"
 	depends on SO3VIRT
