--- a/ME/SOO.refso3/so3/arch/arm/boot/dts/so3virt.dts
+++ b/ME/SOO.refso3/so3/arch/arm/boot/dts/so3virt.dts
@@ -40,6 +40,16 @@
 		status = "ok";
 	};
 
+	so3virt-mouse {
+		compatible = "mouse,so3virt";
+		status = "ok";
+	};
+
+	so3virt-keyboard {
+		compatible = "keyboard,so3virt";
+		status = "ok";
+	};
+
 	/* SO3 virtual timer managed by AVZ */
  
 	so3virt-timer {
