--- a/ME/SOO.refso3/so3/devices/Kconfig
+++ b/ME/SOO.refso3/so3/devices/Kconfig
@@ -9,6 +9,6 @@ source "devices/ramdev/Kconfig"
 source "devices/timer/Kconfig"
 source "devices/irq/Kconfig"
 source "devices/fb/Kconfig"
-
+source "devices/input/Kconfig"
 
 endmenu
