Add vinput and vfb back-ends in rpi4 and vexpress-notz dts (see #17).

--- a/agency/linux/arch/arm/boot/dts/bcm2711-rpi-4-b.dts
+++ b/agency/linux/arch/arm/boot/dts/bcm2711-rpi-4-b.dts
@@ -93,7 +93,16 @@
 				compatible = "vuihandler,backend";
 				status = "disabled";
 			};
-		
+
+			vfb {
+				compatible = "vfb,backend";
+				status = "ok";
+			};
+
+			vinput {
+				compatible = "vinput,backend";
+				status = "ok";
+			};
 		};
 	};
 
