--- a/agency/linux/arch/arm/boot/dts/vexpress-notz.dts
+++ b/agency/linux/arch/arm/boot/dts/vexpress-notz.dts
@@ -382,7 +382,16 @@
 				compatible = "vuihandler,backend";
 				status = "disabled";
 			};
-		
+
+			vfb {
+				compatible = "vfb,backend";
+				status = "ok";
+			};
+
+			vinput {
+				compatible = "vinput,backend";
+				status = "ok";
+			};
 		};
 	};
 };
