Supplied two variants of configuration for SO3 ME (with and without ramfs)

--- a/ME/SOO.refso3/so3/configs/so3virt_defconfig
+++ b/ME/SOO.refso3/so3/configs/so3virt_defconfig
@@ -7,12 +7,8 @@
 # General
 #
 CONFIG_CROSS_COMPILE="arm-linux-gnueabihf-"
-
-#
-# Platform
-#
-CONFIG_STANDALONE=y
 CONFIG_SO3VIRT=y
+# CONFIG_STANDALONE is not set
 CONFIG_THREAD_ENV=y
 # CONFIG_PROC_ENV is not set
 
