--- a/ME/SOO.refso3/so3/arch/arm/Kconfig
+++ b/ME/SOO.refso3/so3/arch/arm/Kconfig
@@ -1,23 +1,13 @@
 
-menu "Platform"
-
 choice
-	prompt "SO3 OS type"
-
-config STANDALONE
-        bool "Standalone OS"
-        
-endchoice
-
-choice
-  prompt "Target"
+  prompt "SO3 OS type"
 	
-       	depends on STANDALONE
 	config SO3VIRT
 		bool "SO3 virtshare/avz"
 		depends on MMU
+
+	config STANDALONE
+		bool "SO3 standalone environment"
         
    
 endchoice
-
-endmenu
