--- a/ME/SOO.refso3/so3/configs/so3virt_defconfig
+++ b/ME/SOO.refso3/so3/configs/so3virt_defconfig
@@ -31,6 +31,8 @@ CONFIG_SO3VIRT_SERIAL=y
 CONFIG_RAMDEV=y
 # CONFIG_ARM_TIMER is not set
 CONFIG_VIRQ=y
+CONFIG_SO3VIRT_FB=y
+CONFIG_SO3VIRT_INPUT=y
 
 #
 # SO3 Applications
@@ -62,6 +64,8 @@ CONFIG_IPC_PIPE=y
 #
 CONFIG_VDUMMY_FRONTEND=y
 CONFIG_VUART_FRONTEND=y
+CONFIG_VFB_FRONTEND=y
+CONFIG_VINPUT_FRONTEND=y
 # CONFIG_VDOGA12V6NM_FRONTEND is not set
 # CONFIG_VWEATHER_FRONTEND is not set
 # CONFIG_VUIHANDLER_FRONTEND is not set
