--- a/agency/linux/arch/arm/configs/vexpress_defconfig
+++ b/agency/linux/arch/arm/configs/vexpress_defconfig
@@ -3322,6 +3322,6 @@ CONFIG_VINPUT_BACKEND=y
 # CONFIG_VWEATHER_BACKEND is not set
 # CONFIG_VUIHANDLER_BACKEND is not set
 # CONFIG_VLEDS_BACKEND is not set
-# CONFIG_VFB_BACKEND is not set
+CONFIG_VFB_BACKEND=y
 # end of Smart Object Oriented subsystem
 # end of SOO Framework and subsystems
