Adding compilation configuration for multiple network architecture (NAT, bridge)

--- a/ME/SOO.net/so3/soo/drivers/Kconfig
+++ b/ME/SOO.net/so3/soo/drivers/Kconfig
@@ -22,5 +22,7 @@ config VUIHANDLER_FRONTEND
 config VNET_FRONTEND
     bool "Front end for network access"
 
+source "soo/drivers/vnetfront/Kconfig"
+
 endmenu
 
