--- a/agency/linux/arch/arm/configs/rpi4_defconfig
+++ b/agency/linux/arch/arm/configs/rpi4_defconfig
@@ -4126,5 +4126,6 @@ CONFIG_VUART_BACKEND=y
 # CONFIG_VUIHANDLER_BACKEND is not set
 # CONFIG_VLEDS_BACKEND is not set
 # CONFIG_VFB_BACKEND is not set
+CONFIG_VNET_BACKEND=y
 # end of Smart Object Oriented subsystem
 # end of SOO Framework and subsystems
