--- a/agency/rootfs/configs/vexpress_defconfig
+++ b/agency/rootfs/configs/vexpress_defconfig
@@ -2844,7 +2844,7 @@ BR2_PACKAGE_KMOD=y
 # BR2_PACKAGE_SUPERVISOR is not set
 # BR2_PACKAGE_SWUPDATE is not set
 # BR2_PACKAGE_SYSKLOGD is not set
-# BR2_PACKAGE_SYSLOG_NG is not set
+BR2_PACKAGE_SYSLOG_NG=y
 BR2_PACKAGE_SYSTEMD_ARCH_SUPPORTS=y
 BR2_PACKAGE_SYSTEMD_BOOTCHART_ARCH_SUPPORTS=y
 # BR2_PACKAGE_TAR is not set
