RPI4 enOcean: Add UART5 to RPI4 DTS.

--- a/agency/linux/arch/arm/boot/dts/bcm2711.dtsi
+++ b/agency/linux/arch/arm/boot/dts/bcm2711.dtsi
@@ -149,7 +149,7 @@
 				 <&clocks BCM2835_CLOCK_VPU>;
 			clock-names = "uartclk", "apb_pclk";
 			arm,primecell-periphid = <0x00241011>;
-			status = "disabled";
+			status = "okay";
 		};
 
 		spi3: spi@7e204600 {
