--- a/agency/linux/arch/arm/boot/dts/bcm2711-rpi-4-b.dts
+++ b/agency/linux/arch/arm/boot/dts/bcm2711-rpi-4-b.dts
@@ -11,7 +11,7 @@
 	chosen {
 	 	/* bootargs = "console=ttyAMA0,115200n8 root=/dev/ram rw slub_debug=PUZ"; */
  	   /*  bootargs = "coherent_pool=1M 8250.nr_uarts=1 cma=64M cma=256M  smsc95xx.macaddr=DC:A6:32:18:DD:95 vc_mem.mem_base=0x3ec00000 vc_mem.mem_size=0x40000000  console=serial0,115200 console=tty1 root=/dev/ram elevator=deadline fsck.repair=yes rootwait"; */
-	bootargs = "coherent_pool=1M 8250.nr_uarts=1 cma=64M cma=256M  smsc95xx.macaddr=DC:A6:32:18:DD:95 vc_mem.mem_base=0x3ec00000 vc_mem.mem_size=0x40000000  console=ttyS0,115200 root=/dev/ram elevator=deadline fsck.repair=yes rootwait";
+	bootargs = "coherent_pool=1M 8250.nr_uarts=1 cma=64M iomem=relaxed cma=256M  smsc95xx.macaddr=DC:A6:32:18:DD:95 vc_mem.mem_base=0x3ec00000 vc_mem.mem_size=0x40000000  console=ttyS0,115200 root=/dev/ram elevator=deadline fsck.repair=yes rootwait";
 
 #if 0 /* SOO.tech */ 
 		/* 8250 auxiliary UART instead of pl011 */
@@ -30,6 +30,7 @@
 	aliases {
 		serial0 = &uart1;
 		serial1 = &uart0;
+		serial5 = &uart5;
 		mmc0 = &emmc2;
 		mmc2 = &sdhost;
 		i2c3 = &i2c3;
@@ -334,6 +335,13 @@
 	pinctrl-0 = <&uart1_gpio14>;
 	status = "okay";
 };
+
+/* BCU SOO.tech: UART5 used for the enOcean control */
+&uart5 {
+	pinctrl-names = "default";
+	pinctrl-0 = <&uart5_gpio12>;
+	status = "okay";
+};	
 
 
 &i2c1 {
