enOcean: Add the enOcean FE/BE to the agency and SOO.refso3 ME.
For now, it opens the UART5 (ttyAMA5) at the BE probe and read 10 bytes
from it and print them. Tested and working on the RPi4.

--- a/ME/SOO.refso3/so3/arch/arm/boot/dts/so3virt.dts
+++ b/ME/SOO.refso3/so3/arch/arm/boot/dts/so3virt.dts
@@ -81,6 +81,11 @@
 				compatible = "vuart,frontend";
 				status = "ok";
 			};
+    
+			venocean {
+				compatible = "venocean,frontend";
+				status = "ok";
+			};
 		};
 	
 		features {
