--- a/ME/SOO.refso3/so3/configs/so3virt_defconfig
+++ b/ME/SOO.refso3/so3/configs/so3virt_defconfig
@@ -60,6 +60,7 @@ CONFIG_VUART_FRONTEND=y
 # CONFIG_VDOGA12V6NM_FRONTEND is not set
 # CONFIG_VWEATHER_FRONTEND is not set
 # CONFIG_VUIHANDLER_FRONTEND is not set
+CONFIG_VENOCEAN_FRONTEND=y
 # CONFIG_RTOS is not set
 CONFIG_MMU=y
 # CONFIG_DEBUG_PRINTK is not set
