--- a/ME/SOO.refso3/so3/soo/drivers/Makefile
+++ b/ME/SOO.refso3/so3/soo/drivers/Makefile
@@ -5,3 +5,4 @@ obj-$(CONFIG_VUART_FRONTEND) += vuartfront/
 obj-$(CONFIG_VDOGA12V6NM_FRONTEND) += vdoga12v6nmfront/
 obj-$(CONFIG_VWEATHER_FRONTEND) += vweatherfront/
 obj-$(CONFIG_VUIHANDLER_FRONTEND) += vuihandlerfront/
+obj-$(CONFIG_VENOCEAN_FRONTEND) += venoceanfront/
