--- a/ME/SOO.net/usr/libc/string/Makefile
+++ b/ME/SOO.net/usr/libc/string/Makefile
@@ -2,7 +2,7 @@
 -include $(USR_DIR)/Makefile.common
 
 LIB = strcpy strcmp strncmp strlen memcpy strncpy memset memcmp strcat strchrnul strnlen memchr memmove
-LIB += stpncpy stpcpy strchr strrchr memrchr strtok strspn strcspn
+LIB += stpncpy stpcpy strchr strrchr memrchr strtok strspn strcspn strstr
 
 all: $(patsubst %,%.o,$(LIB))
 
