SOO.enOcean: add the vdoga and vanalog BE/FE, gpios and PWM driving are implemented and tested, the enOcean switch can drive correctly the system. The HW still has some problems, verifications of the teste values should be done (the way the motor is going according to the in1_ph value and to test if the end of run captors are active high or low)

--- a/ME/SOO.enocean/so3/arch/arm/boot/dts/so3virt.dts
+++ b/ME/SOO.enocean/so3/arch/arm/boot/dts/so3virt.dts
@@ -86,6 +86,16 @@
 				compatible = "venocean,frontend";
 				status = "ok";
 			};
+
+			vdoga {
+				compatible = "vdoga,frontend";
+				status = "ok";
+			};
+
+			vanalog {
+				compatible = "vanalog,frontend";
+				status = "ok";
+			};
 		};
 	
 		features {
